--- a/src/singleCell_practice/singleCell_분석_기초편.Rmd
+++ b/src/singleCell_practice/singleCell_분석_기초편.Rmd
@@ -16,6 +16,7 @@ output: html_document
 질문 사항이 있거나, 코드를 돌리는데 어려움이 있다면 github페이지에서 -> 'issue' 탭 -> 'New issue' 버튼을 클릭해서 작성해주시면 빠른 시일내에 답변드리겠습니다. 
 
 **도협 박사님! '# Question' 이라고 적은 부분과 주석들을 자세히 읽고 피드백 부탁 드립니다.**
+Question: R script or Rmd script? 
 
 ```{r setup, include=FALSE} 
 # knitr::opts_knit$set(root.dir = rprojroot::find_rstudio_root_file())
@@ -24,14 +25,44 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 # 필요한 라이브러리 불러오기 
-챕터 02-02 'R 패키지 설치 및 실행'
+챕터 02-02 'R 패키지 설치 및 실행' 참고 
 ```{r}
 library(Seurat)
 library(dplyr)
 ```
 
-# 데이터 불러오기
-챕터 05-01 'Seurat Object 만들기'
+# 챕터 05  "Seurat Object 만들기, 품질관리 및 필터링"
+## 챕터 05-01 "Seurat Object 만들기"
+
+[코드 5 - 1] 2가지 방법으로 Seurat 오브젝트 만들기 (Question - 책에서는 타이틀을 코드 블럭 아래에 두었는데 여기는 위? 아래? )
+```{r}
+# [1] h5 파일 이용하기
+count_SRR13911909.h5 <- Read10X_h5("./singleCell/results/count_SRR13911909/outs/filtered_feature_bc_matrix.h5", use.names = TRUE, unique.features = TRUE)
+SRR13911909.h5.sobj <- CreateSeuratObject(counts = count_SRR13911909.h5, project = "pbmc_alzheimer")
+
+# [2] filtered_feature_bc_matrix folder 폴더 이용하기 
+SRR13911909 <- Read10X(data.dir =  "./singleCell/results/count_SRR13911909/outs/filtered_feature_bc_matrix/" )
+SRR13911909.sobj <- CreateSeuratObject(counts = SRR13911909, project = "pbmc_alzheimer")
+```
+
+[코드 5-1.1] 코드 시간 재기 
+```{r}
+# 코드가 얼마나 걸리는지 시간 재기 (예시). 이 때, 해당 코드 블럭을 한번에 실행시켜줘야 정확한 시간을 얻을 수 있습니다. 하이라이트 한 뒤 실행 시키면 한번에 실행 가능합니다. 
+# [1] h5 파일 이용하기
+start <- Sys.time() # 시작 시간 
+count_SRR13911909.h5 <- Read10X_h5("./singleCell/results/count_SRR13911909/outs/filtered_feature_bc_matrix.h5", use.names = TRUE, unique.features = TRUE)
+SRR13911909.h5.sobj <- CreateSeuratObject(counts = count_SRR13911909.h5, project = "pbmc_alzheimer")
+print( Sys.time() - start ) # 현재 시간 – 시작 시간  = 총 걸린 시간
+
+# [2] filtered_feature_bc_matrix folder 폴더 이용하기 
+start <- Sys.time()
+SRR13911909 <- Read10X(data.dir = "./singleCell/results/count_SRR13911909/outs/filtered_feature_bc_matrix/")
+SRR13911909.sobj <- CreateSeuratObject(counts = pbmc_alzheimer.SRR13911909, project = "pbmc_alzheimer")
+print( Sys.time() - start )
+```
+
+
+[코드 5 - 2] 모든 샘플을 Seurat 오브젝트 변형하기
 ```{r}
 # 각 샘플마다 raw matrix 를 Seurat object 로 생성하기
 count_SRR13911909.h5 <- Read10X_h5("./filtered_feature_bc_matrix_SRR13911909.h5", use.names = TRUE, unique.features = TRUE)
@@ -53,8 +84,9 @@ count_SRR13911914.h5 <- Read10X_h5("./filtered_feature_bc_matrix_SRR13911914.h5"
 SRR13911914.h5.sobj <- CreateSeuratObject(counts = count_SRR13911914.h5, project = "pbmc_alzheimer")
 ```
 
+Seurat 오브젝트 둘러보기 
 ```{r}
-# seurat object 둘러보기 
+# seurat object 크기 확인하기
 SRR13911909.h5.sobj
 dim(SRR13911909.h5.sobj) # feature (gene) x cell 
 colnames(SRR13911909.h5.sobj)[1:10] # cell barcode
@@ -72,11 +104,9 @@ SRR13911909.h5.sobj@assays$RNA$counts
 SRR13911909.h5.sobj@ # @뒤에서 'tab'을 눌러서 어떤 데이터를 불러 올 수 있는지 확인해 보세요. 
 ```
 
+## 챕터 05-02 '품질관리 (QC) 및 필터링'
 
-
-# QC/filtering
-챕터 05-02 '품질관리 (QC) 및 필터링'
-
+미토콘드리아 비율 구하기
 ```{r}
 # 각 샘플마다 미토콘드리아 비율 구하기 
 SRR13911909.h5.sobj[["percent.mt"]] <- PercentageFeatureSet(SRR13911909.h5.sobj, pattern = "^MT-")
@@ -85,9 +115,11 @@ SRR13911911.h5.sobj[["percent.mt"]] <- PercentageFeatureSet(SRR13911911.h5.sobj,
 SRR13911912.h5.sobj[["percent.mt"]] <- PercentageFeatureSet(SRR13911912.h5.sobj, pattern = "^MT-")
 SRR13911913.h5.sobj[["percent.mt"]] <- PercentageFeatureSet(SRR13911913.h5.sobj, pattern = "^MT-")
 SRR13911914.h5.sobj[["percent.mt"]] <- PercentageFeatureSet(SRR13911914.h5.sobj, pattern = "^MT-")
+```
 
-# QC plot 시각화
-## Violoin plot 
+QC plots 시각화 하기 
+```{r}
+# Violoin plot 
 VlnPlot(SRR13911909.h5.sobj, features = c("nFeature_RNA", "nCount_RNA", "percent.mt"), ncol = 3)
 VlnPlot(SRR13911910.h5.sobj, features = c("nFeature_RNA", "nCount_RNA", "percent.mt"), ncol = 3)
 VlnPlot(SRR13911911.h5.sobj, features = c("nFeature_RNA", "nCount_RNA", "percent.mt"), ncol = 3)
@@ -95,7 +127,7 @@ VlnPlot(SRR13911912.h5.sobj, features = c("nFeature_RNA", "nCount_RNA", "percent
 VlnPlot(SRR13911913.h5.sobj, features = c("nFeature_RNA", "nCount_RNA", "percent.mt"), ncol = 3)
 VlnPlot(SRR13911914.h5.sobj, features = c("nFeature_RNA", "nCount_RNA", "percent.mt"), ncol = 3)
 
-## Scatter featrue plot [1] ncount x nfeature [2] ncount vs percent.mt  
+# Scatter featrue plot [1] ncount x nfeature [2] ncount vs percent.mt  
 FeatureScatter(SRR13911909.h5.sobj, feature1 = "nCount_RNA", feature2 = "nFeature_RNA") # [1]
 FeatureScatter(SRR13911909.h5.sobj, feature1 = "nCount_RNA", feature2 = "percent.mt")  # [2]
 FeatureScatter(SRR13911910.h5.sobj, feature1 = "nCount_RNA", feature2 = "nFeature_RNA")
@@ -108,7 +140,10 @@ FeatureScatter(SRR13911913.h5.sobj, feature1 = "nCount_RNA", feature2 = "nFeatur
 FeatureScatter(SRR13911913.h5.sobj, feature1 = "nCount_RNA", feature2 = "percent.mt")
 FeatureScatter(SRR13911914.h5.sobj, feature1 = "nCount_RNA", feature2 = "nFeature_RNA")
 FeatureScatter(SRR13911914.h5.sobj, feature1 = "nCount_RNA", feature2 = "percent.mt")
+```
 
+위의 플롯들을 이용해서 필터링 하기 
+```{r}
 # 필터링 
 SRR13911909.h5.sobj <- subset(SRR13911909.h5.sobj, subset = nFeature_RNA > 200 & nFeature_RNA < 3000 & percent.mt < 10)  
 SRR13911910.h5.sobj <- subset(SRR13911910.h5.sobj, subset = nFeature_RNA > 200 & nFeature_RNA < 3000 & percent.mt < 10)
@@ -118,23 +153,24 @@ SRR13911913.h5.sobj <- subset(SRR13911913.h5.sobj, subset = nFeature_RNA > 200 &
 SRR13911914.h5.sobj <- subset(SRR13911914.h5.sobj, subset = nFeature_RNA > 200 & nFeature_RNA < 3000 & percent.mt < 10)
 ```
 
+필터링 된 데이터의 QC 플롯 그려보기 
 ```{r}
-# 필터링 된 데이터 QC 플롯 그려보기 (예시 - SRR13911909.h5.sobj)
+# 예시 - SRR13911909.h5.sobj
 VlnPlot(SRR13911909.h5.sobj, features = c("nFeature_RNA", "nCount_RNA", "percent.mt"), ncol = 3)
 FeatureScatter(SRR13911909.h5.sobj, feature1 = "nCount_RNA", feature2 = "percent.mt")
 FeatureScatter(SRR13911909.h5.sobj, feature1 = "nCount_RNA", feature2 = "nFeature_RNA")
 ```
 
 
+# Chapter 06 "정규화 및 배치 교정" + 07 "차원 축소 및 클러스터링" 
+= Normalization + Integration + Dimension reduction
 
-# Normalization + Integration + Dimension reduction
-챕터 06 "정규화 및 배치교정" + 07 "차원 축소 및 클러스터링" 
 Question - 해당 부분 보완 가능하면 부탁드립니다 
 
 방법 1: 각 샘플을 정규화 한 후, 합치기 
 방법 2 : 모든 샘플을 합친 후, 한번에 정규화 하기 
 
-## log normalization
+## Log normalization
 챕터 06-01-로그정규화 이용 
 
 - *NormalizeData()*: https://satijalab.org/seurat/reference/normalizedata 
